<resources>
    <!--  App Name -->
    <string name="app_name">Cleair</string>

    <!--  General -->
    <string name="toolbar_search_hint">Search...</string>

    <string name="action_about">About</string>
    <string name="action_reload">Reload</string>
    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_confirm">Confirm</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="dialog_undo">Undo</string>

    <string name="button_retry">Retry</string>
    <string name="button_back">Back</string>

    <!-- Activity Names -->
    <string name="activity_settings">Settings</string>
    <string name="activity_settings_bookmark">Bookmarks</string>
    <string name="activity_about">About</string>
    <string name="activity_history">History</string>

    <!--  Measure unit -->
    <string name="ug_m3">µg/m&lt;sup&gt;3&lt;/sup&gt;</string>

    <!--  Measure Types -->
    <string name="ozone">Ozone</string>
    <string name="pm10">PM10</string>

    <!-- API Errors-->
    <string name="empty_data">Records are empty</string>
    <string name="empty_data_description">Please retry later</string>
    <string name="error_title">Error</string>
    <string name="error_loading_stations">There was a problem loading the stations</string>
    <string name="error_loading_generics">There was a problem loading the data</string>
    <string name="error_offline">You are offline</string>
    <string name="error_offline_description">Please check your connection, then</string>
    <string name="error_generic">Something went wrong</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Main Activity -->
    <string name="main_not_available">N/A</string>
    <string name="main_current_period">Current Period</string>
    <string name="main_current_week">Current Week</string>
    <string name="main_last_week">Last Week</string>
    <string name="main_start_date">Start Date</string>
    <string name="main_end_date">End Date</string>

    <!-- History Activity -->
    <string name="history_menu_week">Week</string>
    <string name="history_menu_month">Month</string>
    <string name="history_menu_year">Year</string>
    <string name="history_best_day">Best day</string>

    <!-- Settings Activity -->
    <string name="settings_header_general">General</string>
    <string name="settings_header_notifications">Notifications</string>
    <string name="settings_header_data_sync">Data &amp; sync</string>

    <!-- General settings -->
    <string name="settings_general_app_version">Version</string>
    <string name="settings_general_policy">Policy</string>
    <string name="settings_general_privacy">Terms and Conditions</string>

    <!-- Settings for Data & Sync -->
    <string name="settings_title_data">Data</string>
    <string name="settings_bookmark_station">Bookmarked Stations</string>
    <string name="settings_bookmark_station_summary">Manage your bookmarked stations</string>

    <string name="settings_bookmark_station_remove_confirm_title">Remove the station?</string>
    <string name="settings_bookmark_station_remove_confirm_body">The station will be removed from your bookmark</string>
    <string name="settings_bookmark_station_removed">Station removed</string>

    <string name="settings_clear_offline">Clear stored data</string>
    <string name="settings_clear_offline_summary">This clear all the stored data like the station list and the associated measures</string>

    <string name="settings_title_sync">Sync</string>
    <string name="settings_title_sync_frequency">Sync frequency</string>
    <string-array name="settings_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!-- Settings for Notifications -->

    <!-- About Activity -->
    <string name="about_app">@string/app_name</string>
    <string name="about_by">by</string>
    <string name="about_team">HTN Team</string>
    <string name="about_team_people">Nicolò Veronese \nGiovanni Libralesso \nFabio Dainese \nMatteo Carraro</string>
    <string name="about_license">GPL V3</string>

    <!-- Urls -->
    <string name="url_privacy">http://www.arpa.veneto.it/privacy</string>
    <string name="url_terms">http://www.arpa.veneto.it/note-legali</string>

    <!-- Google Errors -->
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>

    <!-- Bottom Sheet Behavior -->
    <string name="ScrollAwareFABBehavior">com.greenteadev.unive.clair.ui.widget.bottomsheet.ScrollAwareFABBehavior</string>
    <string name="ScrollingToolbarBehavior">com.greenteadev.unive.clair.ui.widget.bottomsheet.ScrollAwareToolbarBehavior</string>
    <string name="WABottomSheetBehavior">com.greenteadev.unive.clair.ui.widget.bottomsheet.WABottomSheetBehavior</string>

    <!-- Shared Preference keys-->
    <string name="pref_data_clear">pref_data_clear</string>
    <string name="pref_data_bookmark">pref_data_bookmark</string>
    <string name="pref_data_synk_frequency">pref_sync_frequency</string>
</resources>
