<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_primary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_arrow_back"
        android:tint="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textColor="@color/white"
            android:textSize="@dimen/text_huge" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_by"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_team"
            android:textColor="@color/white"
            android:textSize="@dimen/text_headline" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/inner_horizontal_margin">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_team_people"
                android:textColor="@color/white"
                android:textSize="@dimen/text_headline" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_license"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />
    </LinearLayout>
</RelativeLayout>