<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenteadev.unive.clair.ui.main.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_hideable="true"
            app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
            app:layout_behavior="@string/WABottomSheetBehavior"
            app:elevation="@dimen/bottom_sheet_elevation">

            <include layout="@layout/include_bottom_sheet" />
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:clickable="true"
            android:src="@drawable/ic_location"
            app:layout_anchor="@id/bottom_sheet"
            app:layout_anchorGravity="end"
            app:layout_behavior="@string/ScrollAwareFABBehavior" />

        <com.arlib.floatingsearchview.FloatingSearchView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:floatingSearch_close_search_on_keyboard_dismiss="true"
            app:floatingSearch_dismissFocusOnItemSelection="true"
            app:floatingSearch_dismissOnOutsideTouch="true"
            app:floatingSearch_leftActionMode="noLeftAction"
            app:floatingSearch_menu="@menu/menu_main"
            app:floatingSearch_searchBarMarginLeft="@dimen/horizontal_margin"
            app:floatingSearch_searchBarMarginRight="@dimen/horizontal_margin"
            app:floatingSearch_searchBarMarginTop="@dimen/vertical_margin"
            app:floatingSearch_searchHint="@string/toolbar_search_hint"
            app:floatingSearch_showSearchKey="true"
            app:floatingSearch_suggestionsListAnimDuration="250"
            app:layout_behavior="@string/ScrollingToolbarBehavior" />
    </android.support.design.widget.CoordinatorLayout>

    <com.greenteadev.unive.clair.ui.widget.ProgressFrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:emptyBackgroundColor="@color/material_gray"
        app:emptyContentTextColor="@color/white"
        app:emptyTitleTextColor="@color/white"
        app:errorBackgroundColor="@color/theme_primary"
        app:errorButtonBackgroundColor="@color/theme_accent"
        app:errorButtonTextColor="@color/white"
        app:errorContentTextColor="@color/white"
        app:errorTitleTextColor="@color/white"
        app:loadingBackgroundColor="@color/theme_primary"
        app:loadingProgressBarColor="@color/theme_accent" />
</FrameLayout>